--- a/Rapport/formalia/FutureWork.tex
+++ b/Rapport/formalia/FutureWork.tex
@@ -9,6 +9,8 @@ This is one of the problems of a cyclic executive, it is a very rigid construct 
 
 The delimitations introduced In \ref{sec:Delimitations} could with further improvements be removed. The delimitation of multiple object tracking could be removed, by tracking all objects with the kinect sensor and sending information about all objects landing positions, but also the time in which they would get there. The robot then has to calculate the route it should take to catch all objects and which to skip if impossible to reach everything. The delimitation of not driving backwards could be solved by using motors that can turn around their own axis such that the robot always drives forward and doesn’t need to turn around itself but rather just turn the wheels in the desired direction and go.
 
+Another improvement would be testing the system for stack overflow, which wasn't tested, even though some of the theoretical aspects of it were discussed in \ref{ \ref{sec:Stack Overflow}}, and also  having the experience of using such tools.
+
 If we were to introduce more real-time scheduling theories, the next step would be to implement graceful degradation for the wifi code. This would create the possibility of receiving data continuously, but the wifi code may not be scheduled to receive the data, if there is not enough time for the other tasks to execute. This is a possibility since it would only reduce accuracy of the prediction, since more data from the Kinect sensor leads to more precise prediction of the impact point. This would still introduce the problem of dual-shield compatibility, since the Wifi and Motor Shield cannot operate at the same time, due to them using the same pins.
 
 The fact that both shields cannot operate at the same time could be eliminated by rerouting the pins on the Wifi Shield, or using a cable to send the data, instead of having a wireless connection. With a cable instead of the wireless connection would also reduce the time used on sending the data, but also reduces the mobility of the robot.
